added bottom tag for images

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <h1>About Me</h1>
                     <img src="./images/PHOTO-2022-04-20-13-32-47.jpg" alt="Ozge Slapak Photo" title="Ozge Slapak">
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error voluptate magnam cumque magni, repellat doloribus iure nisi? Voluptatum nemo in officia iure quo officiis soluta. Adipisci vero temporibus provident nisi.</p>
-                    <a href="resume.html" target="_blank">My Resume</a>
+                    <bottom><a href="resume.html" target="_blank">My Resume</a></bottom>
             </div>
         </div>
         <!--Footer Section-->
